# ohlc-data

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: data_aggregator.py  data_generator.py  metrics_calculator.py  performance_optimizations.py  simple_visualizer.py  visualizer.py
src/utils/: benchmark.py
tests/: run_tests.py  test_data_aggregator.py  test_data_generator.py  test_integration.py  test_metrics_calculator.py
